// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social icons component Must render a list of social links with icons 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Social
    social={
      Array [
        Object {
          "network": "facebook",
          "url": "https://www.facebook.com/orenciorodolfo",
        },
        Object {
          "network": "linkedin",
          "url": "https://www.linkedin.com/in/rodolfo-goncalves",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Link
          className=""
          url="https://www.facebook.com/orenciorodolfo"
        >
          <Icon
            icon="facebook fa-2x"
          />
        </Link>,
        <Link
          className=""
          url="https://www.linkedin.com/in/rodolfo-goncalves"
        >
          <Icon
            icon="linkedin fa-2x"
          />
        </Link>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "facebook",
        "nodeType": "function",
        "props": Object {
          "children": <Icon
            icon="facebook fa-2x"
          />,
          "className": "",
          "url": "https://www.facebook.com/orenciorodolfo",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "icon": "facebook fa-2x",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "linkedin",
        "nodeType": "function",
        "props": Object {
          "children": <Icon
            icon="linkedin fa-2x"
          />,
          "className": "",
          "url": "https://www.linkedin.com/in/rodolfo-goncalves",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "icon": "linkedin fa-2x",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Link
            className=""
            url="https://www.facebook.com/orenciorodolfo"
          >
            <Icon
              icon="facebook fa-2x"
            />
          </Link>,
          <Link
            className=""
            url="https://www.linkedin.com/in/rodolfo-goncalves"
          >
            <Icon
              icon="linkedin fa-2x"
            />
          </Link>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "facebook",
          "nodeType": "function",
          "props": Object {
            "children": <Icon
              icon="facebook fa-2x"
            />,
            "className": "",
            "url": "https://www.facebook.com/orenciorodolfo",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "icon": "facebook fa-2x",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "linkedin",
          "nodeType": "function",
          "props": Object {
            "children": <Icon
              icon="linkedin fa-2x"
            />,
            "className": "",
            "url": "https://www.linkedin.com/in/rodolfo-goncalves",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "icon": "linkedin fa-2x",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Social icons component Must render an empty list properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Social
    social={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [],
    },
    "ref": null,
    "rendered": Array [],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [],
      },
      "ref": null,
      "rendered": Array [],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
